# spotify_llm_controller

./: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
src/spotify_llm_controller/: client.py  config.py  openai_helper.py  spotify_actions.py
tests/: README.md  __init__.py  conftest.py  test_client.py  test_config.py  test_openai_helper.py  test_spotify_actions.py
